--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,12 @@ header {
 	text-align: center;
 }
 
+button {
+	padding: 1rem;
+	font-size: 1.1rem;
+	margin: 1rem;
+}
+
 #app {
 	display: flex;
 	justify-content: center;
@@ -57,6 +63,11 @@ header {
 
 .cell {
 	display: flex;
+	flex: 1;
+	height: 3rem;
+	width: 3rem;
+	border: 0.5px solid black;
+	background-color: aqua;
 	font-size: 3rem;
 	justify-content: center;
 	align-items: center;
@@ -88,5 +99,17 @@ header {
 	}
 	to {
 		opacity: 1;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	.cell {
+		height: 2rem;
+		width: 2rem;
+	}
+
+	.ship-section {
+		width: 2rem;
+		height: 2rem;
 	}
 }
